# isometrichell

./: .gitignore  ARCHITECTURE.md  ASSETS.md  CMakeLists.txt  CONVERSATION_SYSTEM.md  FOUNDATION_PHASE_README.md  QUICK_TEST.md  README.md  RENDERING_ANALYSIS.md  ROADMAP.md  build-engine.sh  index.html  launch-editor.sh  launch-engine.sh  package.json  verify-setup.sh
_codeql_build_dir/: CMakeCache.txt  Makefile  TheDailyGrind  cmake_install.cmake
_codeql_build_dir/assets/IRR/: credits.txt
_codeql_build_dir/assets/IRR/HDRI/: Field 1-512p.hdr
_codeql_build_dir/assets/snow_tilesets_source/: dead_trees_snow.blend  snow_to_other.xcf  snowplains_broken_tower.blend  snowplains_broken_tower.blend1  snowplains_exits.blend  snowplains_path.blend  snowplains_props.blend  snowplains_water.blend  temple_entrance.blend
assets/TBD/: README.md
assets/TBD/cave_extras/isometric-cave-extras/: iso-objects.blend
assets/TBD/snow_tilesets/snow_tilesets_source/: cabin_snowy.blend  snow_wall_diffuse_wet.xcf  snowplains_boat.blend  snowplains_bridge.blend  snowplains_containers.blend  snowplains_fence.blend  (+5 more)
assets/individual/: README.md
assets/isometric_trees_pack/: license.txt
assets/snow_tilesets_source/: CREDITS.txt  snowplains_ice.blend  snowplains_walls.blend  temple_entrance.blend1
assets/sprite_metadata/: README.md  dungeon.json  ground_tiles.json  trees.json  vehicles.json
cpp/include/building/: Building.h  BuildingSystem.h
cpp/include/engine/: Engine.h  Input.h  Time.h
cpp/include/entities/: Entity.h  Player.h
cpp/include/game/: Game.h  GameState.h
cpp/include/rendering/: BatchRenderer.h  Camera.h  DirectXBackend.h  Framebuffer.h  IsometricRenderer.h  OpenGLBackend.h  RenderBackend.h  Renderer.h  Shader.h  ShaderLibrary.h  Texture.h  TextureManager.h
cpp/include/ui/: MainMenu.h  UIRenderer.h
cpp/include/utils/: IsometricUtils.h  Logger.h  NoiseGenerator.h
cpp/include/world/: Biome.h  Tile.h  World.h
cpp/src/: main.cpp
cpp/src/building/: Building.cpp  BuildingSystem.cpp
cpp/src/engine/: Engine.cpp  Input.cpp  Time.cpp
cpp/src/entities/: Entity.cpp  Player.cpp
cpp/src/game/: Game.cpp  GameState.cpp
cpp/src/rendering/: BatchRenderer.cpp  Camera.cpp  DirectXBackend.cpp  Framebuffer.cpp  IsometricRenderer.cpp  OpenGLBackend.cpp  Renderer.cpp  Shader.cpp  ShaderLibrary.cpp  Texture.cpp  TextureManager.cpp
cpp/src/ui/: MainMenu.cpp  UIRenderer.cpp
cpp/src/utils/: IsometricUtils.cpp  Logger.cpp  NoiseGenerator.cpp
cpp/src/world/: Biome.cpp  Tile.cpp  World.cpp
docs/: ARCHITECTURE.md  ASSETS.md  ASSET_CATALOG.md  ASSET_EXTRACTION_SUMMARY.md  ASSET_IMPLEMENTATION_SUMMARY.md  ASSET_INTEGRATION_COMPLETE.md  ASSET_PROCESSING_GUIDE.md  ASSET_USAGE.md  ASSET_WORKFLOW.md  BRANDING.md  BUILD_DEPENDENCIES.md  CONTRIBUTING.md  CPP_BUILD.md  CPP_IMPLEMENTATION_GUIDE.md  CPP_IMPLEMENTATION_STATUS.md  DIRECTORY_STRUCTURE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY_OLD.md  IMPLEMENTATION_SUMMARY_PZ.md  ISO-64x64-BUILDING-PREVIEW.md  ISO-64x64-GRID-REFERENCE.md  LINE_OF_SIGHT_SYSTEM.md  OPENGL_STATUS.md  PORTAL_SYSTEM_GUIDE.md  PROJECT_SUMMARY.md  PZ_EXTRACTION_QUICKREF.md  PZ_MAP_EXTRACTION_GUIDE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RENDERING_IMPLEMENTATION_SUMMARY.md  RENDERING_SYSTEM.md  RESTRUCTURING_SUMMARY.md  ROADMAP.md  TESTING_GUIDE.md  TILED_GUIDE.md  TILESET_RESOLUTION.md  TILEZED_INTEGRATION.md  VISION_SYSTEM_EXAMPLES.md  WORLDEDIT_INTEGRATION_COMPLETE.md  (+4 more)
docs/visual/: README.md
engine/assets/: AssetLoader.js
engine/audio/: AudioManager.js
engine/core/: Engine.js  Input.js  Logger.js  Time.js  TimeSystem.js
engine/rendering/: Camera.js  IsometricRenderer.js  Renderer.js  SpriteAnimation.js
engine/world/: AIDataExporter.js  PZMapDataParser.js  PZWLoader.js  PortalEditorTool.js  PortalSystem.js
logs/: README.md
src/: Game.js  main.js
src/building/: Building.js  BuildingSystem.js
src/editor/: EditorUI.js
src/entities/: Boat.js  CharacterCustomization.js  EmotionSystem.js  Entity.js  InventorySystem.js  Item.js  ItemDatabase.js  Player.js  SurvivalAttributes.js
src/ui/: CharacterSelectionUI.js  InventoryUI.js  RadialMenu.js
src/world/: Biome.js  CollisionSystem.js  LineOfSight.js  Tile.js  World.js
tiled_maps/: template_map.tmx  template_map_highres.tmx
tilesheets/ground/: dirt.tsx  dirt_128.tsx  forest_ground.tsx  grass_green.tsx  grass_green_128.tsx  sand.tsx  sand_128.tsx  stone_path.tsx
tilesheets/vegetation/: trees_no_shadow.tsx  trees_shaded.tsx  trees_shaded_128.tsx
tilesheets/vehicles/: vehicles_collection.tsx
tools/: README.md  extract-pz-map.sh  setup-editors.sh  setup-tilesets.sh
tools/tilesets/: DailyGrind_Buildings.tiles  DailyGrind_Characters.tiles  DailyGrind_Ground.tiles  DailyGrind_Paths.tiles  DailyGrind_Trees.tiles  DailyGrind_Vehicles.tiles  README.md
utils/: IsometricUtils.js  MathUtils.js  NoiseGenerator.js  README.md  analyze_iso_building.py  archive_processed_assets.py  create_sprite_metadata.py  export_scenes_to_game.py  export_world_to_worlded.py  extract_character_tiles.py  extract_tbd_assets.py  generate_ploppable_scenes.py  inspect_assets.py  split_tilesheets.py  test_individual_tiles.py
(+5 files in other folders)
